// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component with custom class matches snapshot 1`] = `
<textarea
  className="TextArea CUSTOM_CLASS"
/>
`;

exports[`TextArea component with no props matches snapshot 1`] = `
<textarea
  className="TextArea"
/>
`;
